--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -4,11 +4,7 @@
   <div class="row">
     <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
       <div class="card sahdow">
-        <img
-          src="https://images.unsplash.com/photo-1571863533956-01c88e79957e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80"
-          alt=""
-          class="card-img-top"
-        />
+        <img src="/images/auth-pic.jpeg" alt="" class="card-img-top" />
 
         <div class="card-body p-3">
           <h1 class="text-center">Login</h1>
