--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,5 +1,5 @@
-<% layout('/layouts/boilerplate') %>
-<div class="show-page mb-3">
+<% title=campground.title %> <% layout('/layouts/boilerplate') %>
+<div class="container mx-auto margin show-page mb-3">
   <div class="rounded">
     <div class="card">
       <div
