--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,5 +1,5 @@
-<% layout('/layouts/boilerplate') %>
-<div class="row">
+<% title="Oh no Error" %> <% layout('/layouts/boilerplate') %>
+<div class="container mx-auto margin row">
   <div class="col-8 offset-2">
     <div class="alert alert-danger" role="alert">
       <h4 class="alert-heading"><%= err.message %></h4>
