--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -1,4 +1,4 @@
-<% layout('/layouts/boilerplate') %>
+<% title="Signup" %> <% layout('/layouts/boilerplate') %>
 
 <div class="container mt-5">
   <div class="row">
