--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,6 +1,6 @@
-<% layout('/layouts/boilerplate') %>
+<% title = "Edit "+campground.title %> <% layout('/layouts/boilerplate') %>
 
-<div class="row">
+<div class="container mx-auto margin row">
   <h1 class="text-center">Edit <%= campground.title %></h1>
   <div class="col-md-6 offset-md-3">
     <form
