--- a/views/campgrounds/mycampgrounds.ejs
+++ b/views/campgrounds/mycampgrounds.ejs
@@ -1,31 +1,34 @@
-<% layout('/layouts/boilerplate') %>
-<h1>
-  <%= username.charAt(0).toUpperCase() + username.slice(1) %>'s Campgrounds
-</h1>
+<% title = username.charAt(0).toUpperCase() + username.slice(1) +" Campgrounds"
+%> <% layout('/layouts/boilerplate') %>
+<section class="container mx-auto margin">
+  <h1>
+    <%= username.charAt(0).toUpperCase() + username.slice(1) %>'s Campgrounds
+  </h1>
 
-<a class="btn btn-primary mb-3" href="/campgrounds/new">Add New Campground</a>
+  <a class="btn btn-primary mb-3" href="/campgrounds/new">Add New Campground</a>
 
-<div class="main">
-  <div class="campground-card">
-    <% campground.forEach(function(campground){ %>
-    <div class="campground">
-      <img
-        src="<%= campground.images[0].url %>"
-        class="card-img-top index-img"
-        alt="..."
-      />
-      <div class="card-body" style="padding: 10px">
-        <h5 class="card-title"><%= campground.title %></h5>
+  <div class="main">
+    <div class="campground-card">
+      <% campground.forEach(function(campground){ %>
+      <div class="campground">
+        <img
+          src="<%= campground.images[0].url %>"
+          class="card-img-top index-img"
+          alt="..."
+        />
+        <div class="card-body" style="padding: 10px">
+          <h5 class="card-title"><%= campground.title %></h5>
 
-        <p class="card-text"><%= campground.description %></p>
-        <p class="card-text">
-          <small class="text-muted"><%= campground.location %></small>
-        </p>
-        <a class="btn btn-primary" href="/campgrounds/<%= campground._id %>"
-          >View <%= campground.title %></a
-        >
+          <p class="card-text"><%= campground.description %></p>
+          <p class="card-text">
+            <small class="text-muted"><%= campground.location %></small>
+          </p>
+          <a class="btn btn-primary" href="/campgrounds/<%= campground._id %>"
+            >View <%= campground.title %></a
+          >
+        </div>
       </div>
+      <% }) %>
     </div>
-    <% }) %>
   </div>
-</div>
+</section>
