--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,5 +1,5 @@
-<% layout('/layouts/boilerplate') %>
-<div class="row">
+<% title="New Campground" %> <% layout('/layouts/boilerplate') %>
+<div class="row container mx-auto margin">
   <h1 class="text-center">New Campground</h1>
   <div class="col-md-6 offset-md-3">
     <form
