added some margin in campground main page

--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,6 +1,6 @@
 <div id="map" style="height: 400px; width: 100%"></div>
 <% title = "Campgrounds" %> <% layout('/layouts/boilerplate') %>
-<section class="container mx-auto">
+<section class="container mx-auto mb-3">
   <h1>All Campgrounds</h1>
 
   <a class="btn btn-primary mb-3" href="/campgrounds/new">Add New Campground</a>
